cmake_minimum_required(VERSION 3.20)
project(Data_Structures_3rd_Sem)

set(CMAKE_CXX_STANDARD 14)

add_executable(InsertionSortUsingTemplate "InsertionSortUsingTemplate.cpp")
add_executable(BubbleSort "BubbleSort.cpp")
add_executable(SelectionSort SelectionSort.cpp)

add_executable(LinkedList LinkedList.cpp)