cmake_minimum_required(VERSION 3.20)
project(Data_Structures_3rd_Sem)

set(CMAKE_CXX_STANDARD 14)

add_executable(BubbleSort BubbleSort.cpp)
add_executable(SelectionSort SelectionSort.cpp)
add_executable(LabWork3_SinglyLinkedList LabWork3_SinglyLinkedList.cpp)
add_executable(LabWork4_DoublyLinkedList LabWork4_DoublyLinkedList.cpp)
add_executable(LabWork5_CircularLinkedList LabWork5_CircularLinkedList.cpp)
add_executable(LabWork6_StacksUsingArray LabWork6_StacksUsingArray.cpp)
add_executable(LabWork7_StacksUsingLinkedList LabWork7_StacksUsingLinkedList.cpp)
add_executable(LabWork8_QueueUsingCircularArray LabWork8_QueueUsingCircularArray.cpp)
add_executable(LabWork9_QueueUsingCircularLL LabWork9_QueueUsingCircularLL.cpp)
add_executable(LabWork10_DoubleEndedQueueUsingLL LabWork10_DoubleEndedQueueUsingLL.cpp)
add_executable(LabWork11_BinarySearchTree LabWork11_BinarySearchTree.cpp)
add_executable(LabWork12_SortingUsingTemplate.cpp LabWork12_SortingUsingTemplate.cpp)